Sigil v0.4.1 2011.08.26
    - Fix issue 615: implement undo for Find/Replace in Book View.
    - Update Toc section of manual for 0.4 Toc panel.
    - Implement issue 80: Select lines when clicking on line number in line number area in
      code view.
    - Fix issue 770: Incorrect file permissions for some files in archive create on OS X.
    - Fix issue 890: Line number mismatch between Code View and Validation Results when
      style tag in head section contains CDATA. CDATA was being stripped from the Code View.
    - Fix issue 942: Work around for the Nook not being able to deal with cover meta element having
      attributes in alphabetic order.
    - Fix issue 976: Creation of new Code View tab fails to show all content if the web page's 
      asynchronous loading is delayed.
    - Fix an issue where the line numbers in code view were not aligned to the line they represent.
    - Fix issue 871: Update heading combo when putting cursor on block with heading style.
    - Fix the formation of an empty paragraph at the top of the new file on doing a chapter split
      in Book View.
    - Fix issue 967: toc.ncx file keeps erasing manual input.
    - Fix issues 657, 661, 694 and 867: The Heading Selector in Book View will now function as
      expected and find the correct block-level tag to change rather than attempting to change
      inline tags. It will also retain the attributes (including class) of the old tag.
    - Fix the entity display for shy, mdash and ndash.
    - Set modified state on book when page order is changed.
    - Fixed the cursor issues on moving from Book to Code View and vice-versa. The new view should
      now always gain keyboard focus and show the cursor properly.
    - Insert the xml tag explicitly so that Tidy doesn't insert one without encoding and standalone
      attributes.
    - Fix issue #877: Invalid xml error prevents Find/Replace window from opening.